<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/heat_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:elevation="4dp"
        app:cardBackgroundColor="@color/wavescoreBackgroundElevation2"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:cardMaxElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:orientation="horizontal"
                android:weightSum="8">

                <TextView
                    android:id="@+id/tv_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="0dp"
                    android:layout_marginBottom="0dp"
                    android:layout_weight="2"
                    android:background="@color/monokai_magentuosa"
                    android:gravity="start"
                    android:padding="4dp"
                    android:text="@string/status_tournament"
                    android:textColor="@android:color/white"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_pricemoney"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="2dp"
                    android:layout_marginBottom="0dp"
                    android:layout_weight="3"
                    android:background="@color/dollarBackground1"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/price_money"
                    android:textColor="@color/dollarText1"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_tour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginBottom="0dp"
                    android:layout_weight="3"
                    android:background="@color/wavescoreBackgroundElevation3"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/tour"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="12dp"
                    android:paddingTop="4dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="0dp"
                    android:text="@string/name_tournament"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:textStyle="normal|bold" />

                <TextView
                    android:id="@+id/tv_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="12dp"
                    android:paddingTop="0dp"
                    android:paddingEnd="8dp"
                    android:text="@string/location_tournament"
                    android:textColor="@android:color/white"
                    android:textSize="12sp" />

            </LinearLayout>


            <ImageView
                android:id="@+id/image_tournament"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:background="#7C4DFF"
                android:clickable="false"
                android:contentDescription="@string/location_tournament"
                android:cropToPadding="true"
                android:focusable="auto"
                android:src="@drawable/mandurah" />

            <!--<com.google.android.gms.maps.MapView
                android:id="@+id/mapView"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="200dp" />-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_register"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="8dp"
                    android:text="@string/register"
                    android:textAllCaps="true"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>