<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/wavescoreBackground"
    tools:context=".viewpagers.PlaceholderTournamentFragment"> <!--tools:context="com.example.nolti.wavescore.ui.fragments.StartTournament"-->

    <ImageView
        android:layout_width="240dp"
        android:layout_height="200dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/torneos"
        android:src="@drawable/tournament"
        app:layout_constraintBottom_toTopOf="@+id/titleIntro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.941" />

    <TextView
        android:id="@+id/titleIntro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="304dp"
        android:layout_marginEnd="16dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:text="@string/hl_tournament_start"
        android:textAlignment="center"
        android:textColor="@color/primaryTextColor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:paddingStart="24dp"
        android:paddingTop="8dp"
        android:paddingEnd="24dp"
        android:paddingBottom="8dp"
        android:text="@string/tv_tournament_start"
        android:textAlignment="center"
        android:textColor="@color/colorTextLight"
        android:textSize="16sp"
        android:textStyle="normal"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleIntro" />

</androidx.constraintlayout.widget.ConstraintLayout>
